--- a/style.css
+++ b/style.css
@@ -1,219 +1,174 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500&display=swap");
+/* Imports */
 
-* {
-  overflow: hidden;
-  font-family: "Noto Sans", sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500&display=swap');
+
+/* Variables */
+
+:root {
+  /* Colors */
+  --color-very-light-yellow: hsl(56, 100%, 95%);
+  --color-yellow: hsl(66, 51%, 88%);
+
+  --color-light-green: hsl(165, 67%, 80%);
+
+  --color-very-light-blue: hsl(205, 51%, 88%);
+  --color-dark-blue: hsl(204, 100%, 17%);
 }
 
-html {
-  height: 100%;
+:root {
+  /* Borders */
+  --border-yellow: 4px solid var(--color-yellow);
+  --border-very-light-blue: 2px solid var(--color-very-light-blue);
 }
 
-body {
-  height: 100%;
-  display: flex;
-  flex-direction: row;
+:root {
+  /* Border Radius */
+  --small-border-radius: 10px;
+}
+
+/* Utilitary Classes */
+
+.utils-text-align-center {
+  text-align: center;
+}
+
+.utils-flex-align-center {
   align-items: center;
-  margin: 0px;
-}
-
-.background-img {
-  width: 100%;
-  height: auto;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  opacity: 0.2;
-  z-index: -10;
-}
-
-.container {
-  height: 90%;
-  width: 40%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  border-right: 5px solid #edf0d1;
-  background-color: #fffeee;
-}
-
-.dialogue {
-  height: auto;
-  width: 60%;
-  position: relative;
-  display: flex;
-  margin: 0px;
-  padding: 20px;
-  flex-direction: column;
-  align-items: center;
-}
-
-.dialogue-container {
-  width: 100%;
-  height: auto;
-  position: relative;
-  display: flex;
-  margin: 0px;
-  padding: 0px;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
 
-#dialogue-text {
-  height: 75%;
-  width: 75%;
-  position: absolute;
-  display: flex;
-  top: 26%;
-  padding: 0px;
-  background: none;
-  text-align: left;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  font-size: 2.5vw;
-  color: #100f0f;
+/* Styles */
+
+:root {
+  font-size: clamp(14px, 2vw, 18px);
 }
 
-#dialogue-box {
+* {
+  box-sizing: border-box;
+}
+
+body,
+input,
+textarea,
+button {
+  font-family: "noto sans", "sans-serif";
+}
+
+body {
+  height: 100vh;
+  margin: 0;
+  overflow-y: hidden;
+}
+
+img {
+  height: 100%;
+  object-fit: cover;
   width: 100%;
-  height: auto;
-  margin: 0px;
 }
 
-.textbox-container {
-  height: 60%;
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.background-img,
+main {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+
+.background-img {
+  filter: opacity(0.2);
+}
+
+main {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 300px 1fr;
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  background: var(--color-very-light-yellow);
+  border-right: var(--border-yellow);
+  height: 100%;
+  padding: 2rem;
 }
 
 textarea {
-  height: 100%;
-  width: 90%;
-  resize: none;
-  overflow-y: scroll;
-  padding: 28px 20px 20px 28px;
+  border-radius: var(--small-border-radius);
   border: none;
-  border-radius: 25px;
-  outline: none;
-  font-size: 2vw;
-}
-
-textarea::placeholder {
-  color: #000000;
-  opacity: 0.3;
-}
-
-.text-container {
-  display: flex;
-  text-align: center;
-  padding: 25px;
-  font-size: 2vw;
-}
-
-.slider-container {
-  width: 90%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 3%;
-}
-
-.slider {
-  width: 70%;
-  appearance: none;
-  padding: 3px;
-  height: 18%;
-  background: #ffffff;
-  outline: none;
-  border: 3px solid #d1e3f0;
-  border-radius: 15px;
-  opacity: 0.7;
-  padding: 5px;
-}
-
-.slider::-webkit-slider-thumb {
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  background: #33aa99;
-  border-radius: 15px;
-  cursor: pointer;
-}
-
-.button-container {
-  height: 10%;
+  font-size: 1rem;
+  height: 30%;
+  margin-bottom: 1rem;
+  overflow-y: scroll;
+  padding: 1rem;
+  resize: none;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 5%;
+}
+
+textarea:focus {
+  outline: none;
+}
+
+input[type='range'] {
+  background: white;
+  appearance: none;
+  border-radius: var(--small-border-radius);
+  border: var(--border-very-light-blue);
+  width: 100%;
+  padding: 0.1rem;
 }
 
 button {
-  height: 100%;
-  width: 40%;
-  font-size: 2vw;
-  outline: none;
+  background: var(--color-light-green);
+  border-radius: var(--small-border-radius);
   border: none;
-  border-radius: 10px;
-  background-color: #aaeedd;
-  color: #003355;
-}
-
-button:active {
-  background-color: #09ddcc;
-  color: #ffffff;
-}
-
-button:hover {
+  color: var(--color-dark-blue);
   cursor: pointer;
-  box-shadow: 2px 2px 8px 1px rgba(1, 1, 1, 0.04);
+  font-size: 0.9rem;
+  margin-top: 2rem;
+  padding: 0.9rem 1.5rem;
 }
 
-.share {
-  margin: 10px;
+.sliders {
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-@media (orientation: portrait) {
-  body {
-    flex-direction: column;
+.dialogue-container {
+  position: relative;
+}
+
+#dialogue-text {
+  left: 14%;
+  max-width: 60%;
+  max-height: 70%;
+  overflow-y: hidden;
+  position: absolute;
+  top: 20%;
+}
+
+.dialogue-text::-webkit-scrollbar {
+  display: none;
+}
+
+/* Media Queries */
+
+@media (min-width: 800px) {
+  main {
+    grid-template-columns: 500px 1fr;
+  }
+}
+
+@media (max-width: 550px) {
+  main {
+    grid-template-columns: 1fr;
   }
 
-  .dialogue {
-    height: 30%;
-    width: 100%;
-  }
-
-  .container {
-    height: 50%;
-    width: 100%;
+e .container {
+    border-bottom: var(--border-yellow);
     border-right: none;
-    border-bottom: 15px solid #f0eed1;
-  }
-
-  .background-img {
-    top: 50%;
-  }
-
-  .button-container {
-    height: 10%;
-  }
-
-  .share {
-    margin: 40px;
-    font-size: 3vw;
-  }
-
-  button,
-  textarea,
-  .text-container {
-    font-size: 5vw;
+    height: fit-content;
   }
 }
+
