refactor `speak.js` to allow pre-loaded voices. (#7)
* refactor: change name of HTML elements variable and remove some of the global variables.

* refactor: add function to decode audio data and rename `assets/voice` to `assets/voices`.

* refactor: add function to calculate dialogue text font size.

* feat: add function to get the input text with some treatments.

* feat: add voice selector and function to play selected audio.

* feat: add function to speak the text.

* feat: add function to cancel previous timeouts.

* feat: add function to write to the .

* feat: add styles for voice selector.

* feat: add fixed font size to lake font.

* feat: add function to load voices.

Previously, the code was giving the warning 'The AudioContext was not allowed to start'. This commit fixes this issue and adds the @async flag to all the async functions.

* refactor: remove top-level async function.

* refactor: short 'localVoicesDecodedAudioData' to 'localVoices'.

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@
 body,
 input,
 textarea,
+select,
 button {
   font-family: "noto sans", "sans-serif";
 }
@@ -109,6 +110,25 @@ textarea:focus {
   outline: none;
 }
 
+.voice-selector-container {
+  align-items: center;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.voice-selector {
+  width: 100%;
+  cursor: pointer;
+}
+
+select {
+  background: white;
+  border-radius: var(--small-border-radius);
+  border: var(--border-very-light-blue);
+  font-size: 0.9rem;
+  padding: 0.5rem;
+}
+
 input[type='range'] {
   background: white;
   appearance: none;
@@ -149,16 +169,17 @@ button {
   margin-top: 2rem;
 }
 
-#dialogue-text {
+.dialogue-text {
   left: 14%;
   max-height: 70%;
   max-width: 70%;
   overflow: scroll;
   position: absolute;
   top: 20%;
+  font-size: 1.5rem;
 }
 
-#dialogue-text::-webkit-scrollbar {
+.dialogue-text::-webkit-scrollbar {
   display: none;
 }
 
